# nbdev3-cli-template

./: README.md  copier.yml  smoke_test.sh
template/: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  settings.ini
template-operation/.copier-ops/: apply_overlays.sh  bootstrap.sh  overlay  remove_manifest.txt  run_nbdev_new.sh
template-state/: README.md  ctx.yaml  pyproject.toml
template-state/.agents/skills/notebook-flow-verification/: SKILL.md
template-state/nbs/: sidebar.yml
template-state/tests/: test_cli.py
template-state/{{ package_name }}/: cli.py
template/.agents/skills/notebook-flow-verification/scripts/: list_changed_notebooks.sh  run_nbdev_workflow.sh
template/nbs/: 00_cli.ipynb  99_tests.ipynb  _quarto.yml  index.ipynb  nbdev.yml
template/{{ package_name }}/: cli.py
