[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ project_name }}"
dynamic = ["version"]
description = "{{ description }}"
readme = "README.md"
requires-python = ">={{ min_python }}"
license = { text = "Apache-2.0" }
authors = [{ name = "{{ author_name }}", email = "{{ author_email }}" }]
keywords = ["nbdev", "uv", "cli"]
classifiers = [
  "Natural Language :: English",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "scipy>=1.13",
  "openpyxl>=3.1",
  "pip>=25.3",
  "tinycss2>=1.4.0",
  "bleach>=6.2.0",
]

[project.scripts]
{{ cli_name }} = "{{ package_name }}.cli:main"

[project.urls]
Repository = "https://github.com/{{ repo_slug }}"
Documentation = "https://{{ repo_slug.split('/')[0] }}.github.io/{{ project_name }}"

[project.entry-points.nbdev]
{{ package_name }} = "{{ package_name }}._modidx:d"

[dependency-groups]
dev = [
  "nbdev>=3.0.12",
  "notebook>=7.5.0",
  "nbconvert>=7.16.6",
  "nbclassic>=1.3.3",
  "jupyterlab-quarto>=0.3.5",
  "pytest>=8",
  "watermark>=2.4",
  "matplotlib>=3.8",
  "seaborn>=0.13.2",
  "ghp-import>=2.1.0",
]

[tool.setuptools.dynamic]
version = { attr = "{{ package_name }}.__version__" }

[tool.setuptools.packages.find]
include = ["{{ package_name }}"]

[tool.nbdev]
title = "{{ package_name }}"
repo = "{{ repo_slug }}"
branch = "main"
nbs_path = "nbs"
lib_path = "{{ package_name }}"
doc_path = "_docs"
doc_host = "https://{{ repo_slug.split('/')[0] }}.github.io"
doc_baseurl = "/{{ project_name }}"

[tool.uv]
cache-dir = "./.uv-cache"
