[project]
name = "{{ project_name }}"
version = "0.1.0"
description = "{{ description }}"
readme = "README.md"
requires-python = ">={{ min_python }}"
authors = [{ name = "{{ author_name }}", email = "{{ author_email }}" }]
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "scipy>=1.13",
  "openpyxl>=3.1",
  "pip>=25.3",
  "tinycss2>=1.4.0",
  "bleach>=6.2.0",
]

[project.scripts]
{{ cli_name }} = "{{ package_name }}.cli:main"

[dependency-groups]
dev = [
  "nbdev>=2.3.24",
  "notebook>=7.5.0",
  "nbconvert>=7.16.6",
  "nbclassic>=1.3.3",
  "jupyterlab-quarto>=0.3.5",
  "pytest>=8",
  "watermark>=2.4",
  "matplotlib>=3.8",
  "seaborn>=0.13.2",
  "ghp-import>=2.1.0",
]

# UV_OFFLINE=1 uv run nbdev_export
#  or
# uv run --offline
[build-system]
requires = ["hatchling>=1.0"]
build-backend = "hatchling.build"

[tool.nbdev]
nbs_path = "nbs"
lib_path = "{{ package_name }}"

[tool.uv]
cache-dir = "./.uv-cache"
